<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/nameHint">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress" 
        android:hint="@string/emailHint"/>

    <EditText
        android:id="@+id/bdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/birthdateHint" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="phone" 
        android:hint="@string/phoneHint"/>

    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:layout_marginTop="15dp"
        android:entries="@array/genderList"
        />
    
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="0dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="fill_parent"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:textColor="@color/buttontextcolor"
            android:text="@string/updateProfile" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:textColor="@color/buttontextcolor"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
